<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ایمیل ارتباط</string>
    <string name="beta_app_name">ایمیل ارتباط</string>
    <string name="shortcuts_title">حسابهای ارتباط</string>
    <string name="unread_widget_label">خوانده نشده های ارتباط</string>
    <string name="remote_control_label">کنترل از راه دور ارتباط</string>
    <string name="remote_control_desc">به این برنامه اجازه کنترل فعالیتها و تنظیمات ارتباط را می دهد</string>
    <string name="app_authors">گروه فنی تاپ</string>
    <string name="app_copyright_fmt"></string>
    <string name="app_license"></string>
    <string name="welcome_message_title">به ایمیل ارتباط خوش آمدید</string>
    <string name="accounts_welcome"><![CDATA[
<p>
به برنامه پست الکترونیکی ارتباط خوش آمدید
</p>
    ]]></string>
    <string name="default_signature"></string>
    <string name="account_delete_dlg_instructions_fmt">حساب کاربری \"<xliff:g id="account">%s</xliff:g>\" حذف خواهد شد.</string>
    <string name="account_recreate_dlg_instructions_fmt">تمام اطلاعات محلی حساب \"<xliff:g id="account">%s</xliff:g>\" حذف می شوند. تنظیمات حساب حفظ خواهد شد.</string>
    <string name="account_clear_dlg_instructions_fmt">نسخه محلی پیامهای حساب \"<xliff:g id="account">%s</xliff:g>\" حذف خواهند شد. تنظیمات حساب حفظ خواهد شد.</string>
    <string name="insufficient_apg_permissions">دسترسی به APG امکان پذیر نیست. لطفاً مجدداً برنامه را نصب نمائید.</string>
    <string name="import_dialog_error_message">برای ادامه لطفاً یک برنامه مدیریت فایل نصب نمائید</string>
    <string name="open_market">اجرای بازارچه</string>
    <string name="app_authors_fmt">نویسندگان: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">خواندن ضمائم نامه ها</string>
    <string name="read_attachment_desc">به این برنامه اجازه خواندن ضمائم نامه ها را می دهد</string>
    <string name="read_messages_label">خواندن نامه ها</string>
    <string name="read_messages_desc">به ابن برنامه اجازه خواندن نامه ها را می دهد</string>
    <string name="delete_messages_label">حذف نامه ها</string>
    <string name="delete_messages_desc">به این برنامه اجازه حذف نامه ها را می دهد</string>
    <string name="about_title_fmt">درباره <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">حسابها</string>
    <string name="folders_title">پوشه ها</string>
    <string name="advanced">پیشرفته</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g> </string>
    <string name="compose_title_compose">ایجاد نامه</string>
    <string name="compose_title_reply">پاسخ</string>
    <string name="compose_title_reply_all">پاسخ به همه</string>
    <string name="compose_title_forward">ارسال به دیگری</string>
    <string name="choose_folder_title">انتخاب پوشه</string>
    <string name="status_loading_account_folder">بارگذاری <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_loading_account_folder_headers">خواندن عناوین پوشه های <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_sending_account">ارسال <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_processing_account">پردازش <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/<xliff:g id="total">%s</xliff:g></string>
    <string name="status_next_poll">بارگذاری بعدی <xliff:g id="nexttime">%s</xliff:g></string>
    <string name="status_syncing_off">هماهنگ سازی غیرفعال شد</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> مورد انتخاب شد</string>
    <string name="next_action">بعدی</string>
    <string name="previous_action">قبلی</string>
    <string name="okay_action">تأیید</string>
    <string name="cancel_action">لغو</string>
    <string name="send_action">ارسال</string>
    <string name="send_again_action">ارسال مجدد</string>
    <string name="select_action">انتخاب</string>
    <string name="deselect_action">عدم انتخاب</string>
    <string name="reply_action">پاسخ</string>
    <string name="reply_all_action">پاسخ به همه</string>
    <string name="delete_action">حذف</string>
    <string name="archive_action">آرشیو</string>
    <string name="spam_action">هرزنامه</string>
    <string name="forward_action">ارسال به دیگری</string>
    <string name="move_action">انتقال</string>
    <string name="single_message_options_action">ارسال...</string>
    <string name="refile_action">Refile…</string>
    <string name="continue_action">ادامه</string>
    <string name="back_action">بازگشت</string>
    <string name="done_action">اتمام</string>
    <string name="discard_action">انصراف</string>
    <string name="save_draft_action">ذخیره پیش</string>
    <string name="check_mail_action">دریافت پیام</string>
    <string name="send_messages_action">ارسال پیام</string>
    <string name="refresh_folders_action">بروزرسانی لیست پوشه ها</string>
    <string name="filter_folders_action">یافتن پوشه</string>
    <string name="add_account_action">افزودن حساب</string>
    <string name="compose_action">ایجاد</string>
    <string name="search_action">جستجو</string>
    <string name="search_results">نتایج جستجو</string>
    <string name="preferences_action">تنظیمات</string>
    <string name="account_settings_action">تنظیمات حساب</string>
    <string name="folder_settings_action">تنظیمات پوشه</string>
    <string name="global_settings_action">تنظیمات کلی</string>
    <string name="remove_account_action">حذف حساب</string>
    <string name="clear_pending_action">لغو دستورات فعلی (احتیاط)</string>
    <string name="mark_as_read_action">خوانده شده</string>
    <string name="send_alternate_action">اشتراک گذاری</string>
    <string name="send_alternate_chooser_title">انتخاب فرستنده</string>
    <string name="flag_action">افزودن ستاره</string>
    <string name="unflag_action">حذف ستاره</string>
    <string name="copy_action">کپی</string>
    <string name="select_text_action">انتخاب متن</string>
    <string name="show_headers_action">نمایش سرآمد نامه</string>
    <string name="hide_headers_action">عدم نمایش سرآمد نامه</string>
    <string name="message_view_theme_action_dark">تغییر به تم تاریک</string>
    <string name="message_view_theme_action_light">تغییر به تم روشن</string>
    <string name="mark_as_unread_action">خوانده نشده</string>
    <string name="add_cc_bcc_action">افزودن رونوشت</string>
    <string name="read_receipt">دریافت رسید</string>
    <string name="read_receipt_enabled">درخواست دریافت رسید</string>
    <string name="read_receipt_disabled">عدم درخواست دریافت رسید</string>
    <string name="add_attachment_action">افزودن ضمیمه</string>
    <string name="empty_trash_action">خالی کردن نامه های حذف شده</string>
    <string name="expunge_action">حذف کامل</string>
    <string name="clear_local_folder_action">حذف نامه های محلی</string>
    <string name="about_action">درباره</string>
    <string name="about_title">درباره ایمیل ارتباط</string>
    <string name="about_content">محصولی از گروه فنی توسعه ایده پایدار</string>
    <string name="prefs_title">تنظیمات</string>
    <string name="accounts_context_menu_title">تنظیمات حساب</string>
    <string name="general_no_subject">(بدون عنوان)</string>
    <string name="general_no_sender">بدون فرستنده</string>
    <string name="status_loading">در حال دریافت</string>
    <string name="status_loading_more">بارگذاری نامه ها</string>
    <string name="status_network_error">اشکال در ارتباط</string>
    <string name="status_invalid_id_error">نامه پیدا نشد</string>
    <string name="status_loading_more_failed">تلاش مجدد برای بارگذاری نامه ها</string>
    <string name="load_more_messages_fmt">بارگذاری حداکثر <xliff:g id="messages_to_load">%d</xliff:g> نامه دیگر</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_bytes">B</string>
    <string name="account_size_changed">حساب \"<xliff:g id="account">%s</xliff:g>\" از <xliff:g id="oldSize">%s</xliff:g> به <xliff:g id="newSize">%s</xliff:g> تغییر اندازه داد</string>
    <string name="compacting_account">کوچک سازی حساب \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="clearing_account">پاک کردن حساب \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="recreating_account">بازسازی حساب \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="notification_new_title">نامه جدید</string>
    <string name="notification_new_messages_title"><xliff:g id="new_message_count">%d</xliff:g> نامه جدید</string>
    <string name="notification_new_one_account_fmt"><xliff:g id="unread_message_count">%d</xliff:g> نامه خوانده نشده (<xliff:g id="account">%s</xliff:g>)</string>
    <string name="notification_additional_messages">+ <xliff:g id="additional_messages">%d</xliff:g> نامه دیگر <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_action_reply">پاسخ</string>
    <string name="notification_action_mark_as_read">خوانده شده</string>
    <string name="notification_action_delete">حذف</string>
    <string name="notification_certificate_error_title">اشکال اعتبارسنجی در <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_certificate_error_text">تنظیمات سرور را بررسی نمائید</string>
    <string name="notification_bg_sync_ticker">دریافت پیام: <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g></string>
    <string name="notification_bg_sync_title">دریافت پیام</string>
    <string name="notification_bg_send_ticker">ارسال پیام: <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_bg_send_title">ارسال پیام</string>
    <string name="notification_bg_title_separator">:</string>
    <string name="special_mailbox_name_inbox">Inbox</string>
    <string name="special_mailbox_name_outbox">Outbox</string>
    <string name="special_mailbox_name_drafts">Drafts</string>
    <string name="special_mailbox_name_trash">Trash</string>
    <string name="special_mailbox_name_sent">Sent</string>
    <string name="special_mailbox_name_archive">Archive</string>
    <string name="special_mailbox_name_spam">Junk</string>
    <string name="special_mailbox_name_drafts_fmt"><xliff:g id="folder">%s</xliff:g> (پیش نویس ها)</string>
    <string name="special_mailbox_name_trash_fmt"><xliff:g id="folder">%s</xliff:g> (حذفیات)</string>
    <string name="special_mailbox_name_sent_fmt"><xliff:g id="folder">%s</xliff:g> (ارسال شده ها)</string>
    <string name="special_mailbox_name_archive_fmt"><xliff:g id="folder">%s</xliff:g> (آرشیو)</string>
    <string name="special_mailbox_name_spam_fmt"><xliff:g id="folder">%s</xliff:g> (هرز نامه ها)</string>
    <string name="send_failure_subject">ارسال بعضی پیام ها موفقیت آمیز نبود</string>
    <string name="debug_version_fmt">نسخه: <xliff:g id="version">%s</xliff:g></string>
    <string name="debug_enable_debug_logging_title">Enable debug logging</string>
    <string name="debug_enable_debug_logging_summary">Log extra diagnostic information</string>
    <string name="debug_enable_sensitive_logging_title">Log sensitive information</string>
    <string name="debug_enable_sensitive_logging_summary">May show passwords in logs.</string>
    <string name="message_list_load_more_messages_action">بارگذاری پیامهای بیشتر</string>
</resources>